// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxCore type:default checked:false 1`] = `
<div>
  <input
    aria-checked="false"
    aria-invalid="false"
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 3px; background-color: rgb(255, 255, 255); border-color: rgba(33,36,44,0.50);"
    type="checkbox"
  />
</div>
`;

exports[`CheckboxCore type:default checked:null 1`] = `
<div>
  <input
    aria-checked="mixed"
    aria-invalid="false"
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 0px; border-radius: 3px; background-color: rgb(24, 101, 242);"
    type="checkbox"
  />
  <span
    class=""
    style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: rgb(255, 255, 255); width: 12px; height: 12px; mask-image: url(minus-bold.svg); position: absolute; pointer-events: none; margin: 2px;"
  />
</div>
`;

exports[`CheckboxCore type:default checked:true 1`] = `
<div>
  <input
    aria-checked="true"
    aria-invalid="false"
    checked=""
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 0px; border-radius: 3px; background-color: rgb(24, 101, 242);"
    type="checkbox"
  />
  <span
    class=""
    style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: rgb(255, 255, 255); width: 12px; height: 12px; mask-image: url(check-bold.svg); position: absolute; pointer-events: none; margin: 2px;"
  />
</div>
`;

exports[`CheckboxCore type:disabled checked:false 1`] = `
<div>
  <input
    aria-checked="false"
    aria-invalid="false"
    class=""
    disabled=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 3px; cursor: auto; background-color: rgb(247, 248, 250); border-color: rgba(33,36,44,0.16);"
    type="checkbox"
  />
</div>
`;

exports[`CheckboxCore type:disabled checked:null 1`] = `
<div>
  <input
    aria-checked="mixed"
    aria-invalid="false"
    class=""
    disabled=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 3px; cursor: auto; background-color: rgb(247, 248, 250); border-color: rgba(33,36,44,0.16);"
    type="checkbox"
  />
  <span
    class=""
    style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: rgba(33, 36, 44, 0.32); width: 12px; height: 12px; mask-image: url(minus-bold.svg); position: absolute; pointer-events: none; margin: 2px;"
  />
</div>
`;

exports[`CheckboxCore type:disabled checked:true 1`] = `
<div>
  <input
    aria-checked="true"
    aria-invalid="false"
    checked=""
    class=""
    disabled=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 3px; cursor: auto; background-color: rgb(247, 248, 250); border-color: rgba(33,36,44,0.16);"
    type="checkbox"
  />
  <span
    class=""
    style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: rgba(33, 36, 44, 0.32); width: 12px; height: 12px; mask-image: url(check-bold.svg); position: absolute; pointer-events: none; margin: 2px;"
  />
</div>
`;

exports[`CheckboxCore type:error checked:false 1`] = `
<div>
  <input
    aria-checked="false"
    aria-invalid="true"
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 3px; background-color: rgb(252, 238, 236); border-color: #d92916;"
    type="checkbox"
  />
</div>
`;

exports[`CheckboxCore type:error checked:null 1`] = `
<div>
  <input
    aria-checked="mixed"
    aria-invalid="true"
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 0px; border-radius: 3px; background-color: rgb(217, 41, 22);"
    type="checkbox"
  />
  <span
    class=""
    style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: rgb(255, 255, 255); width: 12px; height: 12px; mask-image: url(minus-bold.svg); position: absolute; pointer-events: none; margin: 2px;"
  />
</div>
`;

exports[`CheckboxCore type:error checked:true 1`] = `
<div>
  <input
    aria-checked="true"
    aria-invalid="true"
    checked=""
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 0px; border-radius: 3px; background-color: rgb(217, 41, 22);"
    type="checkbox"
  />
  <span
    class=""
    style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: rgb(255, 255, 255); width: 12px; height: 12px; mask-image: url(check-bold.svg); position: absolute; pointer-events: none; margin: 2px;"
  />
</div>
`;

exports[`RadioCore type:default checked:false 1`] = `
<div>
  <input
    aria-invalid="false"
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 50%; background-color: rgb(255, 255, 255); border-color: rgba(33,36,44,0.50);"
    type="radio"
  />
</div>
`;

exports[`RadioCore type:default checked:null 1`] = `
<div>
  <input
    aria-invalid="false"
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 50%; background-color: rgb(255, 255, 255); border-color: rgba(33,36,44,0.50);"
    type="radio"
  />
</div>
`;

exports[`RadioCore type:default checked:true 1`] = `
<div>
  <input
    aria-invalid="false"
    checked=""
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 4px; border-radius: 50%; background-color: rgb(255, 255, 255); border-color: #1865f2;"
    type="radio"
  />
</div>
`;

exports[`RadioCore type:disabled checked:false 1`] = `
<div>
  <input
    aria-invalid="false"
    class=""
    disabled=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 50%; cursor: auto; background-color: rgb(247, 248, 250); border-color: rgba(33,36,44,0.16);"
    type="radio"
  />
</div>
`;

exports[`RadioCore type:disabled checked:null 1`] = `
<div>
  <input
    aria-invalid="false"
    class=""
    disabled=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 50%; cursor: auto; background-color: rgb(247, 248, 250); border-color: rgba(33,36,44,0.16);"
    type="radio"
  />
</div>
`;

exports[`RadioCore type:disabled checked:true 1`] = `
<div>
  <input
    aria-invalid="false"
    checked=""
    class=""
    disabled=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 50%; cursor: auto; background-color: rgb(247, 248, 250); border-color: rgba(33,36,44,0.16);"
    type="radio"
  />
  <span
    style="position: absolute; top: 4px; left: 4px; height: 8px; width: 8px; border-radius: 50%; background-color: rgba(33, 36, 44, 0.32);"
  />
</div>
`;

exports[`RadioCore type:error checked:false 1`] = `
<div>
  <input
    aria-invalid="true"
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 50%; background-color: rgb(252, 238, 236); border-color: #d92916;"
    type="radio"
  />
</div>
`;

exports[`RadioCore type:error checked:null 1`] = `
<div>
  <input
    aria-invalid="true"
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 1px; border-radius: 50%; background-color: rgb(252, 238, 236); border-color: #d92916;"
    type="radio"
  />
</div>
`;

exports[`RadioCore type:error checked:true 1`] = `
<div>
  <input
    aria-invalid="true"
    checked=""
    class=""
    style="appearance: none; height: 16px; width: 16px; min-height: 16px; min-width: 16px; margin: 0px; outline: none; box-sizing: border-box; border-style: solid; border-width: 4px; border-radius: 50%; background-color: rgb(255, 255, 255); border-color: #d92916;"
    type="radio"
  />
</div>
`;
